# Robot_Cello_Sim

./: README.md
robot_cello_sim/: CMakeLists.txt  package.xml
robot_cello_sim/config/: ur_controllers.yaml
robot_cello_sim/launch/: ur5e_sim_control.launch.py  ur5e_sim_moveit.launch.py
robot_cello_sim/models/bow/: model.config  model.sdf
robot_cello_sim/models/cello/: model.config  model.sdf
robot_cello_sim/models/cello_bow/: cello.world  model.config  model.sdf
robot_cello_sim/models/mount/meshes/: mount.stl
robot_cello_sim/urdf/: ur5e_with_bow.urdf.xacro  ur5e_with_bow_macro.xacro
