<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_cello_sim</name>
  <version>0.0.0</version>
  <description>Simulation for the Robot Cello project mirroring setup in Purdue BHEE 230</description>

  <author>Samitha Ranasinghe</author>

  <maintainer email="sranasi@purdue.edu">Samitha Ranasinghe</maintainer>

  <license>Apache License 2.0</license>

  <url type="repository">https://github.com/Ranasinghe843/Robot_Cello_Sim</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
